--- a/FiniteDifferencingEx.ipynb
+++ b/FiniteDifferencingEx.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,14 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    }
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -137,12 +131,14 @@
     "\n",
     "nx=np.array(nx)\n",
     "dxx = (xmax-xmin) / nx\n",
-    "print(dxx)"
+    "print(dxx)\n",
+    "\n",
+    "orders=[2,4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -188,15 +184,6 @@
       "# pts, spacing: 2048, 0.0009765625\n",
       "RMS for dx=0.0009765625: 2.9008200142390394e-13\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 1080x864 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     },
     {
      "data": {
@@ -416,18 +403,15 @@
     }
    ],
    "source": [
-    "#RMSarchive,NXarchive=[],[]#np.empty((len(nx)),dtype=np.double)\n",
-    "orders=[2,4]\n",
+    "# # set up plot before \n",
+    "# fig = plt.figure(figsize=[15,12])\n",
+    "# st = fig.suptitle('Finite Differencing',fontsize=20)\n",
     "\n",
-    "# PLOTTING\n",
-    "fig = plt.figure(figsize=[15,12])\n",
-    "st = fig.suptitle('Finite Differencing',fontsize=20)\n",
-    "\n",
-    "for order in orders:\n",
+    "for order in orders: # loop through order\n",
     "    print('order: '+str(order))\n",
     "    \n",
     "    RMS,NX=[],[]\n",
-    "    for i,iteration in enumerate(nx):\n",
+    "    for i,iteration in enumerate(nx): # loop through # of gridpts/ spacing\n",
     "        num_pts = iteration # number of grid cells\n",
     "        dx = dxx[i] # grid cell spacing\n",
     "        print('# pts, spacing: '+str(num_pts)+', '+str(dx))   \n",
@@ -451,11 +435,13 @@
     "        NX.append(nx[i])\n",
     "        print('RMS for dx='+str(dx)+': '+str(RMS[i]))\n",
     "        \n",
-    "        if order==2 and i==(len(nx)-1): # save the 2nd order line to plot with 4th order\n",
+    "        # save the 2nd order line to plot with 4th order\n",
+    "        if order==2 and i==(len(nx)-1):\n",
     "            RMSarchive=RMS\n",
     "            NXarchive=NX\n",
     "    \n",
     "        # PLOTTING\n",
+    "        \n",
     "        fig = plt.figure(figsize=[15,12])\n",
     "        st = fig.suptitle('Finite Differencing',fontsize=20)\n",
     "\n",
